--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/solid-js": "^3.0.2",
+    "@astrojs/vercel": "^5.2.0",
     "astro": "^3.5.5",
+    "solid-js": "^1.8.5",
     "typescript": "^5.2.2"
   }
 }
